--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -15,7 +15,7 @@
     </div>
 
     <div class="form-control">
-    <button type="submit" [disabled]="loginForm.invalid" mat-button>Sign up</button>
+    <button type="submit" [disabled]="loginForm.invalid" mat-button>Prisijungti</button>
     </div>
 </form>
 </div>
