--- a/src/app/components/worker/worker.component.html
+++ b/src/app/components/worker/worker.component.html
@@ -1,3 +1,61 @@
-<p>
-  worker works!
-</p>
+<mat-tab-group mat-align-tabs="center">
+  <mat-tab label="Sandelis">
+    <table mat-table [dataSource]="storageItems" class="mat-elevation-z8 w-100">
+    
+      <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef> Pavadinimas </th>
+        <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+      </ng-container>
+    
+      <ng-container matColumnDef="description">
+        <th mat-header-cell *matHeaderCellDef> Aprašymas </th>
+        <td mat-cell *matCellDef="let element"> {{element.description}} </td>
+      </ng-container>
+    
+      <ng-container matColumnDef="amount">
+        <th mat-header-cell *matHeaderCellDef> Kiekis </th>
+        <td mat-cell *matCellDef="let element"> {{element.amount}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="place">
+        <th mat-header-cell *matHeaderCellDef> Vieta sandelyje </th>
+        <td mat-cell *matCellDef="let element"> {{element.place}} </td>
+      </ng-container>
+    
+      <tr mat-header-row *matHeaderRowDef="displayedColumns1"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns1;"></tr>
+    </table>
+  </mat-tab>
+
+  <mat-tab label="Šios dienos pristatymai">
+    <table mat-table [dataSource]="deliveredItems" class="mat-elevation-z8 w-100">
+    
+      <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef> Pavadinimas </th>
+        <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+      </ng-container>
+    
+      <ng-container matColumnDef="description">
+        <th mat-header-cell *matHeaderCellDef> Aprašymas </th>
+        <td mat-cell *matCellDef="let element"> {{element.description}} </td>
+      </ng-container>
+    
+      <ng-container matColumnDef="amount">
+        <th mat-header-cell *matHeaderCellDef> Kiekis </th>
+        <td mat-cell *matCellDef="let element"> {{element.firstStop}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="place">
+        <th mat-header-cell *matHeaderCellDef> Vieta sandelyje </th>
+        <td mat-cell *matCellDef="let element"> {{element.adress}} </td>
+      </ng-container>
+    
+      <tr mat-header-row *matHeaderRowDef="displayedColumns1"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns1;"></tr>
+    </table>
+  </mat-tab>
+
+  <mat-tab label="Papildyti sandeli">
+
+  </mat-tab>
+</mat-tab-group>
