--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,3 +2,11 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.p-l-r-50 {
+    padding-left: 50px; padding-right: 50px;
+}
+
+.w-100 {
+    width: 100%;
+}
